--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "telegram-bot-pixiv-memories",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node dist/index.js",
+    "build": "npx tsc",
+    "debug": "npx ts-node src/index.ts",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
@@ -24,6 +26,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
-    "jest": "^29.3.1"
+    "@types/node": "^18.11.9",
+    "jest": "^29.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
