--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
         "target": "ES2020",
         "module": "Node16",
         "baseUrl": ".",
-        "outDir": "dist",
-        "paths": {
-            "@/*": ["src/*"]
-        }
+        "outDir": "dist"
     },
     "exclude": ["node_modules"]
 }
